--- a/src/content/post/improve-your-prompts-llms/index.mdx
+++ b/src/content/post/improve-your-prompts-llms/index.mdx
@@ -15,16 +15,16 @@ Sweet [AI-generated images](https://www.theguardian.com/technology/2022/nov/12/w
 ![AI-generated picture of a astronaut dog jumping over a fire on the moon](/posts/improve-prompts-llm/dog-fire.jpeg)
 
 <figcaption class="text-sm mb-4 text-center">
-  "Can you generate a picture of a astronaut dog jumping over a fire on the
+  "Can you generate a picture of an astronaut dog jumping over a fire on the
   moon?"
 </figcaption>
 
 Though LLMs (Large Language Models) are still in their infancy, research has shown some [pretty big productivity boosts](https://www.oneusefulthing.org/p/secret-cyborgs-the-present-disruption) in a range of different professions.
-Using metrics from Github Copilot, an AI-based coding tool, Github has found that developers [complete tasks in 55% less time](https://github.blog/2022-09-07-research-quantifying-github-copilots-impact-on-developer-productivity-and-happiness/).
+Using metrics from Github Copilot, an AI-based coding tool, Github has found that developers [complete tasks in 55% less time when taking advantage of AI](https://github.blog/2022-09-07-research-quantifying-github-copilots-impact-on-developer-productivity-and-happiness/).
 
-This is all to say that LLMs are a tool we'll need to learn to use and use well.
+This is all to say that LLMs are a tool we'll need to learn to use and _use well_.
 
-There are quite a few options for LLMs, with the most popular being ChatGPT and Bing.
+There are many options when choosing a LLM, with the most popular being ChatGPT and Bing.
 OpenAI's [ChatGPT](https://chat.openai.com/) is the most well-known, but if we want to use the latest features like ChatGPT-4 (an upgrade to ChatGPT-3) we'll need to pay $20 a month.
 Microsoft has released new [Bing](https://www.bing.com/new) that takes advantage of ChatGPT-4 behind the scenes and is free to use.
 Finally, Google has [Bard](https://bard.google.com/) which is also free to use.
