publish llm article

--- a/src/content/post/improve-your-prompts-llms/index.mdx
+++ b/src/content/post/improve-your-prompts-llms/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Improve Your Prompts for LLMs: Simple and Effective Techniques"
 tags: ["LLMs", "ChatGPT", "Bing", "Bard", "AI", "Prompt Engineering"]
-date: "2023-05-09"
-published: false
+date: "2023-06-07"
+published: true
 ---
 
 import { Prompt } from "./prompt";
