--- a/src/content/post/improve-your-prompts-llms/index.mdx
+++ b/src/content/post/improve-your-prompts-llms/index.mdx
@@ -219,7 +219,7 @@ The term "shot" is synonymous with "example". In Pompt Engineering you will also
 
 - **Zero Shot Prompting:** No examples are provided
 - **One Shot Prompting:** One example is provided
-- **Few Shot Promping:** Two or more examples are provided
+- **Few Shot Prompting:** Two or more examples are provided
 
 The shots, or examples, can be given in the same prompt, or broken out into separate prompts.
 
