updates & adjacency post

--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Postgres: The Graph Database You Didn't Know You Had"
+series: "From Nodes to Connections"
 tags: ["Postgres", "Database", "Data Structures"]
 date: "2023-03-28"
 published: true
