--- a/src/content/post/from-nodes-to-connections-graph-data/index.mdx
+++ b/src/content/post/from-nodes-to-connections-graph-data/index.mdx
@@ -24,7 +24,7 @@ The two columns are a reference to the <em>source</em> or <em>"from"</em> node t
         </div>
 
         <div class="w-full lg:w-1/2 mt-16 lg:mt-0 mx-auto">
-            <strong>The Adjacency List</strong>
+            <strong>Adjacency List</strong>
             <table class="w-full mx-auto">
                 <thead>
                     <tr>
@@ -56,9 +56,9 @@ In this article we'll explore one of these alternatives called the adjacency mat
 
 ## Adjacency Matrix
 
-An adjacency matrix is a table with a row and column for each node in the graph.
+An adjacency matrix is a table with a row and column for each node in the graph (or NxN matrix).
 To represent the edges we store a 1 in a column for a connection and a 0 for no connection.
-Using the same graph as above, an adjacency matrix would look like this:
+Using the same graph as above, the adjacency matrix would look like this:
 
 <div class="lg:mt-8" />
 <section class="full-bleed">
@@ -73,7 +73,7 @@ Using the same graph as above, an adjacency matrix would look like this:
         </div>
 
         <div class="w-full lg:w-1/2 mt-16 lg:mt-0 mx-auto">
-            <strong>The Adjacency Matrix</strong>
+            <strong>Adjacency Matrix</strong>
             <table class="w-full mx-auto">
                 <thead>
                     <tr>
