--- a/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
+++ b/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Unraveling Graph Structures: Exploring Adjacency Lists and Matrices"
+title: "Unraveling Graph Structures: Exploring Adjacency Matrices"
 series: "From Nodes to Connections"
 tags: ["Data Structures", "Graphs"]
 date: "2023-07-19"
