--- a/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
+++ b/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
@@ -140,7 +140,7 @@ adjacency_matrix = [
 ### What about non-DAG graphs?
 
 For unidirected graphs, graphs where all connections are bidirectional, the setup is the same to create the adjacency matrix.
-The only difference is our graph has no explicit _direction_. If `A` connections to `B`, then `B` also connects to `A`. 
+The only difference is our graph has no explicit _direction_. If `A` connects to `B`, then `B` also connects to `A`. 
 Let's take our previous DAG graph, and remove the direction.
 
 <div class="lg:mt-8" />
