--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Postgres: The Graph Database You Didn't Know You Had"
 series: "From Nodes to Connections"
-tags: ["Postgres", "Database", "Data Structures"]
+tags: ["PostgreSQL", "Database", "Data Structures"]
 date: "2023-03-28"
 published: true
 ---
