--- a/src/content/post/improve-your-prompts-llms/index.mdx
+++ b/src/content/post/improve-your-prompts-llms/index.mdx
@@ -12,7 +12,7 @@ ChatGPT took five days since launch to [reach 1 million users](https://twitter.c
 Governments all over the world are trying to [figure out](https://www.asahi.com/ajw/articles/14903078) what to do [with this technology](https://www.bbc.com/news/technology-65139406).
 Sweet [AI-generated images](https://www.theguardian.com/technology/2022/nov/12/when-ai-can-make-art-what-does-it-mean-for-creativity-dall-e-midjourney) are showing up everywhere; like this dog I generated using Bing:
 
-![AI-generated picture of a astronaut dog jumping over a fire on the moon](/posts/improve-prompts-llm/dog-fire.jpeg)
+![AI-generated picture of a astronaut dog jumping over a fire on the moon](./dog-fire.jpeg)
 
 <figcaption class="text-sm mb-4 text-center">
   "Can you generate a picture of an astronaut dog jumping over a fire on the
