--- a/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
+++ b/src/content/post/exploring-adjacency-lists-and-matrices/index.mdx
@@ -3,8 +3,13 @@ title: "Unraveling Graph Structures: Exploring Adjacency Matrices"
 series: "From Nodes to Connections"
 tags: ["Data Structures", "Graphs"]
 date: "2023-07-19"
-published: true 
+published: true
 ---
+
+import { Image } from "astro:assets";
+import baseGraph from "./base_graph.svg";
+import table from "./table.svg";
+import unidirect from "./unidirect.svg";
 
 In [Postgres: The Graph Database You Didn't Know You Had](/posts/postgres-is-a-graph-database) we covered how we can store a DAG (Directed Acyclic Graph) in a relational database.
 We looked at one representation of a graph data structure called an adjacency list--a table with two columns representing how nodes connect.
@@ -16,10 +21,12 @@ The columns store connections from the <em>source</em> or <em>"from"</em> node t
     <div class="lg:flex justify-between gap-4 max-w-7xl mx-auto px-4">
         <div class="w-full lg:w-1/2 text-center">
             <strong>Our Graph</strong>
-            <img
-            src="/posts/from-nodes-to-connections-graph-data/base_graph.svg"
-            alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
-            class="dark:invert mx-auto"
+            <Image
+              src={baseGraph}
+              width={500}
+              height={500}
+              alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
+              class="dark:invert mx-auto"
             />
         </div>
 
@@ -74,7 +81,7 @@ In this article, we'll explore one of these alternatives called the adjacency ma
 
 An adjacency matrix is a table with a row and column for each node in the graph (or NxN matrix).
 To represent the edges we store a 1 in a column for a connection and a 0 for no connection.
-We will start out exploring how to represent DAG's as an adjacency matrix since we covered DAG's in the Postgres article. 
+We will start out exploring how to represent DAG's as an adjacency matrix since we covered DAG's in the Postgres article.
 To store _direction_ in an adjacency matrix the x-axis or rows represent the "from" or "source" node.
 The y-axis represents the connection.
 Using the same graph as above, the adjacency matrix would look like this:
@@ -84,10 +91,12 @@ Using the same graph as above, the adjacency matrix would look like this:
     <div class="lg:flex justify-between gap-4 max-w-7xl mx-auto px-4">
         <div class="w-full lg:w-1/2 text-center">
             <strong>Our Graph</strong>
-            <img
-            src="/posts/from-nodes-to-connections-graph-data/base_graph.svg"
-            alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
-            class="dark:invert mx-auto"
+            <Image
+              src={baseGraph}
+              width={500}
+              height={500}
+              alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
+              class="dark:invert mx-auto"
             />
         </div>
 
@@ -140,7 +149,7 @@ adjacency_matrix = [
 ### What about non-DAG graphs?
 
 For undirected graphs, graphs where all connections are bidirectional, the setup is the same to create the adjacency matrix.
-The only difference is our graph has no explicit _direction_. If `A` connects to `B`, then `B` also connects to `A`. 
+The only difference is our graph has no explicit _direction_. If `A` connects to `B`, then `B` also connects to `A`.
 Let's take our previous DAG graph, and remove the direction.
 
 <div class="lg:mt-8" />
@@ -148,10 +157,12 @@ Let's take our previous DAG graph, and remove the direction.
     <div class="lg:flex justify-between gap-4 max-w-7xl mx-auto px-4">
         <div class="w-full lg:w-1/2 text-center">
             <strong>Our Graph</strong>
-            <img
-            src="/posts/from-nodes-to-connections-graph-data/unidirect.svg"
-            alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
-            class="dark:invert mx-auto"
+            <Image
+              src={unidirect}
+              width={500}
+              height={500}
+              alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
+              class="dark:invert mx-auto"
             />
         </div>
 
@@ -196,28 +207,28 @@ Let's take our previous DAG graph, and remove the direction.
 A cool property emerges from undirected graphs. Can you spot a pattern in the table above?
 Draw a diagonal line from the top left of our matrix to the bottom right (sandwich square style) and fold the matrix along this line.
 
-
 <div class="lg:mt-8" />
 <section class="full-bleed">
-    <div class="lg:flex justify-between gap-4 max-w-7xl mx-auto px-4">
-<img
-  src="/posts/from-nodes-to-connections-graph-data/table.svg"
-  alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
-  class="dark:invert mx-auto"
-/>
-</div>
+  <div class="lg:flex justify-between gap-4 max-w-7xl mx-auto px-4">
+    <Image
+      src={table}
+      width={500}
+      height={500}
+      alt="A graph data structure with three nodes: a, b, and c. A has edges that connect to b and c."
+      class="dark:invert mx-auto"
+    />
+  </div>
 </section>
 
 The connections mirror each other across this line. Our matrix is considered [symmetric](https://en.wikipedia.org/wiki/Symmetric_matrix) when this occurs.
 Symmetric matrices appear in all undirected graphs, but not DAGs!
-
 
 ### This is great, but why would we use an Adjacency Matrix?
 
 **Matrices are incredibly fast at checking if two nodes are connected**
 
 Instead of having to loop through all the edges in an adjacency list to find if two nodes are connected, an adjacency matrix acts
-as a hash table. In our example graph above, if we wanted to check if *A* has an edge to *B* it would be as simple as checking the `[B][A]` position
+as a hash table. In our example graph above, if we wanted to check if _A_ has an edge to _B_ it would be as simple as checking the `[B][A]` position
 in the matrix.
 
 _Note: Since we're working with DAG's and 2D arrays, the order we look up a connection is flipped: `[Destination][Source]`._
@@ -237,22 +248,20 @@ What about deleting an edge? Update the value to be `0` (`adjacency_matrix[desti
 
 **They're huge!**
 
-If we look at an adjacency matrix we need to store every bit of information about the graph, the connected nodes (1's), and not connected nodes(0's). 
+If we look at an adjacency matrix we need to store every bit of information about the graph, the connected nodes (1's), and not connected nodes(0's).
 Compared to an adjacency list which stores only the connections; adjacency matrices take up a lot of space!
-
 
 **It's expensive to add/remove nodes**
 
-We talked about how adjacency matrices are fast at looking up, adding, and removing connections between nodes. 
-On the flip side, adjacency matrices are slow when adding or removing nodes from the graph. 
-To add a node we need to copy our matrix to a new matrix with an additional row and column(of size N+1 x N+1). 
-Then, populate the matrix with the connections to or from the new node. 
+We talked about how adjacency matrices are fast at looking up, adding, and removing connections between nodes.
+On the flip side, adjacency matrices are slow when adding or removing nodes from the graph.
+To add a node we need to copy our matrix to a new matrix with an additional row and column(of size N+1 x N+1).
+Then, populate the matrix with the connections to or from the new node.
 To compare, adding a new node to an adjacency list is a matter of pushing a new node to the list of nodes.
-
 
 ### End
 
-There are many different ways to represent and visualize a graph. 
+There are many different ways to represent and visualize a graph.
 A different representation may be better based on your personal use cases and requirements.
 Need to quickly look up which nodes are connected or need to quickly add or remove edges? Then the adjacency matrix may be the best choice.
 Are you constantly adding nodes to the graph and are limited in your memory footprint? The adjacency list is the representation for you!
