--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -237,8 +237,7 @@ INSERT INTO edges (previous_node, next_node) VALUES (1, 3);
 If we were to visualize our graph at this point, it would look like this:
 
 <div class="flex flex-col items-center justify-center my-6">
-  ![A graph representation of the SQL created
-  above](/posts/postgres-is-a-graph-database/example-1.svg)
+  ![A graph representation of the SQL created above](./example-1.svg)
 </div>
 
 ## Querying Graph Data Structures in Postgres
