--- a/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
+++ b/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How to Reduce Bloat in Large PostgreSQL Tables"
+title: "Wrangling Table Bloat in Large PostgreSQL Tables"
 tags: ["PostgreSQL", "Database"]
 date: "2023-11-03"
 published: true
@@ -20,11 +20,7 @@ We cover a range of topics including:
   <li>And more!</li>
 </ul>
 
-Click the button below to read the full article.
-
 <a
   data-goatcounter-click="timescale-how-to-reduce-bloat-in-large-postgresql-tables__click"
   class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/how-to-reduce-bloat-in-large-postgresql-tables/">
-  How to Reduce Bloat in Large PostgreSQL Tables
-</a>
+  href="https://www.timescale.com/learn/how-to-reduce-bloat-in-large-postgresql-tables/">How to Reduce Bloat in Large PostgreSQL Tables</a>
