add Easily Generate Mock Data with PostgreSQL

--- a/src/content/post/how-to-reduce-your-postgresql-database-size/index.mdx
+++ b/src/content/post/how-to-reduce-your-postgresql-database-size/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "How to Reduce Your PostgreSQL Database Size"
 tags: ["PostgreSQL", "Database"]
+description: "Join me on a journey with Timescale as we trim the fat off your PostgreSQL database. Unearth the nitty-gritty of pages and tuples, the why and how of table bloat, and the lifesaving grace of routine vacuums. We'll dive into Timescale's compression magic and smart retention policies to keep your data lean and mean."
 date: "2023-10-07"
 published: true
 ---
