add new timescale post & remove mastodon

--- a/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
+++ b/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
@@ -3,6 +3,7 @@ title: "Wrangling Table Bloat in Large PostgreSQL Tables"
 tags: ["PostgreSQL", "Database"]
 description: "Dive deep into the world of PostgreSQL with our latest piece on wrestling table bloat. Unpacked by Timescale pros, get the lowdown on spotting, taming, and optimizing bloat for smoother database runs. Plus, snag insider tricks on AutoVacuum tuning and effortless partitioning with Timescale's smart tech."
 date: "2023-11-03"
+external: true
 image: "banner.png"
 published: true
 ---
