--- a/src/content/post/making-react-fast/index.mdx
+++ b/src/content/post/making-react-fast/index.mdx
@@ -5,6 +5,10 @@ date: "2020-02-04"
 published: true
 ---
 
+import { Image } from "astro:assets";
+import htmlDiagramImage from "./html-diagram.svg?url";
+import reactRenderingImage from "./react-rendering.svg?url";
+
 React does a fantastic job abstracting away the rendering of webpages. When state changes, our UI's reflect it. But, have you ever gotten done writing your application just to notice things seem off? Clicking a button displaying a popover stutters for a second, or animations don't run smoothly.
 With React being just a view layer there is a single bottleneck causing "jank" (stuttering in the interaction)... Rendering. If our applications never had to render they'd all be blazing fast running at millions of frames per second (I had top scientists run the numbers)!
 Fortunately we don't live in that world. Our applications are useful--they render and then re-render.
@@ -25,7 +29,12 @@ If we consider the following HTML:
 
 Then the data structure representation would look like:
 
-![DOM tree structure](./html-diagram.svg)
+<Image
+  src={htmlDiagramImage}
+  alt="DOM tree structure"
+  width={500}
+  height={500}
+/>
 
 React takes the same DOM (Document Object Model.. ie. HTML) tree structure, and mirrors it in memory--called the Virtual DOM. Kind of like how a cache is to I/O, the Virtual DOM is to the DOM Tree. It's faster to perform CRUD operations (Create, Read, Update, Delete) in the Virtual DOM. The browser performs massive amounts of work when the DOM Tree is changed: painting, layout, calculations, etc. The Virtual DOM is only a representation of the DOM in memory, so things like painting and layout don't need to be calculated. It's easier to perform many changes to the Virtual DOM then commit the final result, than it is to perform each change to the browser's DOM tree.
 
@@ -35,7 +44,12 @@ When thinking to optimizing React, think of the Virtual and browser's DOM Tree. 
 
 There are two main reasons for components to render in React: when a component's _state_ changes, or when its _props_ change. Out of the box React chooses the naive approach in deciding what needs re-rendered. Re-render the element, and any of its children nodes, every time the props/state changes. For example in the figure below, say we change the state of node 2. All elements contained within the dashed line would also be re-rendered.
 
-![Shows two DOM tree structures with one being re-rendered](./react-rendering.svg)
+<Image
+  src={reactRenderingImage}
+  alt="Shows two DOM tree structures with one being re-rendered"
+  width={500}
+  height={500}
+/>
 
 Don't take this as a bad thing! React cannot make any preconceived assumptions on how our application functions, so it chooses the most user friendly approach. It would instead be frustrating if we updated our application with a logged-in user prop, and the MenuBar component six layers deep didn't reflect this change.
 
