--- a/src/content/post/common-table-expressions-in-sql/index.mdx
+++ b/src/content/post/common-table-expressions-in-sql/index.mdx
@@ -1,21 +1,13 @@
 ---
 title: "How to Use a Common Table Expression (CTE) in SQL"
 description: "Common Table Expressions (CTEs) are my go-to tool when writing complex SQL queries. They can be thought of as working like sub-queries or temporary tables but with their own superpowers."
-tags: ["PostgreSQL", "Databases"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 date: "2024-03-9"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/how-to-use-common-table-expression-sql
 published: true
 ---
 
 Common Table Expressions (CTEs) are my go-to tool when writing complex SQL queries. They can be thought of as working like sub-queries or temporary tables but with their own superpowers.
 
 In this article, we'll take a deep dive into what CTEs are and how they can simplify your queries, how recursive CTES can turn impossible PostgreSQL queries into possible, and how to use CTEs to create optimization fences to improve the performance of your queries.
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-reduce-pg-database-size__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/how-to-use-common-table-expression-sql">
-  How to Use a Common Table Expression (CTE) in SQL
-</a>
