--- a/src/content/post/debugging-using-python/index.mdx
+++ b/src/content/post/debugging-using-python/index.mdx
@@ -2,6 +2,7 @@
 title: "Faster and Easier Python Debugging with breakpoint() and PDB"
 tags: ["Python", "Workflow", "Productivity", "Debugging"]
 date: "2023-05-08"
+heroImage: /images/python-debug-header.svg
 published: true
 ---
 
