--- a/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
+++ b/src/content/post/how-to-reduce-bloat-in-large-postgresql-tables/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Wrangling Table Bloat in Large PostgreSQL Tables"
-tags: ["PostgreSQL", "Database"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 description: "Dive deep into the world of PostgreSQL with our latest piece on wrestling table bloat. Unpacked by Timescale pros, get the lowdown on spotting, taming, and optimizing bloat for smoother database runs. Plus, snag insider tricks on AutoVacuum tuning and effortless partitioning with Timescale's smart tech."
 date: "2023-11-03"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/how-to-reduce-bloat-in-large-postgresql-tables/
 image: "banner.png"
 published: true
 ---
@@ -22,8 +23,3 @@ We cover a range of topics including:
   <li>How Timescale chunks makes partitioning easier</li>
   <li>And more!</li>
 </ul>
-
-<a
-  data-goatcounter-click="timescale-how-to-reduce-bloat-in-large-postgresql-tables__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/how-to-reduce-bloat-in-large-postgresql-tables/">How to Reduce Bloat in Large PostgreSQL Tables</a>
