--- a/src/content/post/how-to-reduce-your-postgresql-database-size/index.mdx
+++ b/src/content/post/how-to-reduce-your-postgresql-database-size/index.mdx
@@ -1,28 +1,23 @@
 ---
 title: "How to Reduce Your PostgreSQL Database Size"
-tags: ["PostgreSQL", "Database"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 description: "Join me on a journey with Timescale as we trim the fat off your PostgreSQL database. Unearth the nitty-gritty of pages and tuples, the why and how of table bloat, and the lifesaving grace of routine vacuums. We'll dive into Timescale's compression magic and smart retention policies to keep your data lean and mean."
 date: "2023-10-07"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/blog/how-to-reduce-your-postgresql-database-size/
 published: true
 ---
 
 I had the pleasure of working with [Timescale](https://www.timescale.com/) to
-write an article on how to reduce your PostgreSQL database size. 
+write an article on how to reduce your PostgreSQL database size.
 
 We cover a range of topics including:
+
 <ul class="mt-[-16px] mb-8">
-<li>What are pages and tuples</li>
-<li>How table bloat occurs</li>
-<li>Why we should vacuum our tables</li>
-<li>Timescale compression</li>
-<li>Retention policies</li>
-<li>And more!</li>
+  <li>What are pages and tuples</li>
+  <li>How table bloat occurs</li>
+  <li>Why we should vacuum our tables</li>
+  <li>Timescale compression</li>
+  <li>Retention policies</li>
+  <li>And more!</li>
 </ul>
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-reduce-pg-database-size__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/blog/how-to-reduce-your-postgresql-database-size/">How to Reduce Your PostgreSQL Database Size</a>
