--- a/src/content/post/how-to-use-postgres-for-data-normalization/index.mdx
+++ b/src/content/post/how-to-use-postgres-for-data-normalization/index.mdx
@@ -1,21 +1,13 @@
 ---
 title: "How to Use PostgreSQL for Data Normalization"
-tags: ["PostgreSQL", "Database"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 description: "Join me on a journey with Timescale as we trim the fat off your PostgreSQL database. Unearth the nitty-gritty of pages and tuples, the why and how of table bloat, and the lifesaving grace of routine vacuums. We'll dive into Timescale's compression magic and smart retention policies to keep your data lean and mean."
 date: "2024-12-20"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/how-to-use-postgresql-for-data-normalization
 published: true
 ---
 
 Managing a database is more than just storing information—it's about storing data efficiently, effectively, and balancing trade-offs. We can employ techniques like data normalization to optimize our data for maintainability and readability, or data denormalization to optimize for raw query speed. Data normalization is the process of breaking data down into structured tables to reduce duplication and make it easier to query and store by enforcing standardization.
 
 In this article, we'll take a look at what data normalization is, how to apply normal forms to achieve data normalization, challenges and tools for data normalization in PostgreSQL, tips on when to denormalize, and how TimescaleDB makes normalization easier.
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-postgres-for-data-normalization__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/how-to-use-postgresql-for-data-normalization">
-  How to Use PostgreSQL for Data Normalization
-</a>
