--- a/src/content/post/postgres-is-a-graph-database/index.mdx
+++ b/src/content/post/postgres-is-a-graph-database/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Postgres: The Graph Database You Didn't Know You Had"
 series: "From Nodes to Connections"
-tags: ["PostgreSQL", "Database", "Data Structures"]
+tags: ["PostgreSQL", "Databases", "Data Structures"]
 date: "2023-03-28"
+heroImage: /images/graph.png
 published: true
 ---
 
