--- a/src/content/post/understanding-postgres-tablespaces/index.mdx
+++ b/src/content/post/understanding-postgres-tablespaces/index.mdx
@@ -1,19 +1,11 @@
 ---
 title: "Understanding PostgreSQL Tablespaces"
 description: "Tablespaces are a PostgreSQL feature that gets easily overlooked but can provide substantial speed improvements and cost-saving potential. As our database grows, tablespaces become a powerful tool in our toolbelt."
-tags: ["PostgreSQL", "Databases"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 date: "2024-01-28"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/understanding-postgresql-tablespaces
 published: true
 ---
 
 Tablespaces are a PostgreSQL feature that gets easily overlooked but can provide substantial speed improvements and cost-saving potential. As our database grows, tablespaces become a powerful tool in our toolbelt.
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-reduce-pg-database-size__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/understanding-postgresql-tablespaces">
-  Understanding PostgreSQL Tablespaces
-</a>
