--- a/src/content/post/creating-fast-time-series-graph-with-postgres/index.mdx
+++ b/src/content/post/creating-fast-time-series-graph-with-postgres/index.mdx
@@ -1,10 +1,11 @@
 ---
 title: "Creating a Fast Time-Series Graph With Postgres Materialized Views"
-tags: ["PostgreSQL", "Database"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 description: "Imagine you have a massive amount of time-series data you want to explore and visualize. Seeing the latest trends, the historical patterns, and the outliers in your data can help you gain insights and make decisions. But how do you visualize and analyze time-series data effectively?"
 date: "2023-11-27"
 image: "banner.png"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/blog/creating-a-fast-time-series-graph-with-postgres-materialized-views/
 published: true
 ---
 
@@ -13,11 +14,3 @@ published: true
 <div class="mt-16" />
 
 In this article with Timescale we dive into practical examples of using materialized views and continuous aggregates to create fast, performant time-series graphs.
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-fast-time-series-graphs__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/blog/creating-a-fast-time-series-graph-with-postgres-materialized-views/">Creating a Fast Time-Series Graph With Postgres Materialized Views</a>
-
