--- a/src/content/post/how-to-design-postgres-database-schemas/index.mdx
+++ b/src/content/post/how-to-design-postgres-database-schemas/index.mdx
@@ -1,19 +1,11 @@
 ---
 title: "How to Design Your PostgreSQL Database: Two Schema Examples"
 description: "How we design and lay out our tables is one of the most important decisions in developing effective and efficient PostgreSQL databases. A database schema is the architecture or structure of the data in our database. It defines what tables we'll have, columns, data types, naming, and relationships between tables."
-tags: ["PostgreSQL", "Databases"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 date: "2024-01-02"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/how-to-design-postgresql-database-two-schema-examples
 published: true
 ---
 
 How we design and lay out our tables is one of the most important decisions in developing effective and efficient PostgreSQL databases. A database schema is the architecture or structure of the data in our database. It defines what tables we'll have, columns, data types, naming, and relationships between tables.
-
-Click the button below to read the full article.
-
-<a
-  data-goatcounter-click="timescale-reduce-pg-database-size__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/how-to-design-postgresql-database-two-schema-examples">
-  How to Design Your PostgreSQL Database: Two Schema Examples
-</a>
