--- a/src/content/post/postgres-security-guide/index.mdx
+++ b/src/content/post/postgres-security-guide/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: "PostgreSQL Security Guide"
-tags: ["PostgreSQL", "Database"]
+tags: ["PostgreSQL", "Databases", "TimescaleDB"]
 description: "PostgreSQL databases are the heart of any application, and the data held within is the lifeline of any organization. A security breach can spell disaster by eroding trust, leaking personal information, and inflicting irreparable damage."
 date: "2024-04-04"
-external: true
+heroImage: /images/timescale-logo.png
+externalLink: https://www.timescale.com/learn/guide-to-postgresql-security
 image: "banner.png"
 published: true
 ---
@@ -14,8 +15,3 @@ Databases store an application's most valuable asset: data. This data includes p
 - Falling share prices or loss of revenue
 - You can be hit with regulatory penalties (e.g., GDPR)
 - In specific sectors, vulnerabilities can be used to cause physical harm
-
-<a
-  data-goatcounter-click="timescale-security__click"
-  class="mt-4 opacity-90 hover:opacity-100 text-center font-bold px-6 py-4 rounded-md dark:bg-[#b3e3ff] dark:hover:bg-[#84acc5] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-  href="https://www.timescale.com/learn/guide-to-postgresql-security">Guide to PostgreSQL Security</a>
