reorganize posts, update dependencies, and fix og generation

--- a/src/content/post/2017/encapsulating-state-with-functional-children/index.mdx
+++ b/src/content/post/2017/encapsulating-state-with-functional-children/index.mdx
@@ -5,7 +5,7 @@ date: "2017-09-14"
 published: true
 ---
 
-import Alert from "../../../components/Alert.astro";
+import Alert from "../../../../components/Alert.astro";
 
 <Alert type="info">
   Update (3/20/2023): Since writing this post the community has called this
