--- a/src/content/post/2023/easily-generate-mock-data-with-postgresql/index.mdx
+++ b/src/content/post/2023/easily-generate-mock-data-with-postgresql/index.mdx
@@ -7,7 +7,7 @@ image: "banner.png"
 published: true
 ---
 
-import { Accordion } from "../../../components/Accordion";
+import { Accordion } from "../../../../components/Accordion";
 
 When writing articles about PostgreSQL there are times I need to generate large swaths of data to test and demonstrate a topic (for example, these Timescale articles [here](https://www.timescale.com/blog/how-to-reduce-your-postgresql-database-size/) and [here](https://www.timescale.com/learn/how-to-reduce-bloat-in-large-postgresql-tables/)).
 It can be a pain to manually insert data or create a CSV and import it into PostgreSQL--which I always have to StackOverflow.
